--- a/llm_info.ipynb
+++ b/llm_info.ipynb
@@ -34,7 +34,7 @@
         "# API 配置\n",
         "client = OpenAI(\n",
         "    base_url='https://xiaoai.plus/v1',  # 验证是否需要 /chat/completions\n",
-        "    api_key='sk-PV4uwhRGKYRoP0z2D9wBzFMFRsPY1NI80kIUwii3p0CMniaN'  # 替换为实际API密钥\n",
+        "    api_key='sk-xxx'  # 替换为实际API密钥\n",
         ")\n",
         "\n",
         "# 模拟参数\n",
